language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_value_picks_innermost_value_and_not_outer_call_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble({\n    let match_on_me = wibble(todo)\n  })\n}\n\npub fn wibble(a) -> Result(Int, String) { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble({
    let match_on_me = wibble(todo)
        ↑                         
  })
}

pub fn wibble(a) -> Result(Int, String) { todo }


----- AFTER ACTION

pub fn main() {
  wibble({
    let match_on_me = wibble(todo)
    case match_on_me {
      Ok(value) -> todo
      Error(value) -> todo
    }
  })
}

pub fn wibble(a) -> Result(Int, String) { todo }
