language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_value_use_discard_with_annotation.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(String, Int)\n}\n\npub fn main(x) {\n  use _: Wibble <- x\n}"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble(String, Int)
}

pub fn main(x) {
  use _: Wibble <- x
      ↑             
}


----- AFTER ACTION

pub type Wibble {
  Wibble(String, Int)
}

pub fn main(x) {
  use Wibble(string, int): Wibble <- x
}
