language-server/src/tests/snapshots/gleam_language_server__tests__action__pattern_match_on_value_with_private_type_from_same_module.snap
---
source: language-server/src/tests/action.rs
expression: "\ntype Wibble {\n  Wobble(Int, String)\n}\n\npub fn main() {\n  let wibble = Wobble(1, \"Hello\")\n  todo\n}\n"
---
----- BEFORE ACTION

type Wibble {
  Wobble(Int, String)
}

pub fn main() {
  let wibble = Wobble(1, "Hello")
      ↑                          
  todo
}


----- AFTER ACTION

type Wibble {
  Wobble(Int, String)
}

pub fn main() {
  let wibble = Wobble(1, "Hello")
  let Wobble(int, string) = wibble
  todo
}
