language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_aliased_to_unqualified_aliased_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble as wob\n\npub fn main(x) -> wob.Wibble(a) {\n    todo\n}\n"
---
----- BEFORE ACTION

import wobble as wob

pub fn main(x) -> wob.Wibble(a) {
                  ▔▔▔▔↑          
    todo
}


----- AFTER ACTION

import wobble.{type Wibble} as wob

pub fn main(x) -> Wibble(a) {
    todo
}
