language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_aliased_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\n\npub fn main(x) -> wobble.Wibble(a) {\n    todo\n}\n"
---
----- BEFORE ACTION

import wobble

pub fn main(x) -> wobble.Wibble(a) {
                  ▔▔▔▔▔▔▔↑          
    todo
}


----- AFTER ACTION

import wobble.{type Wibble}

pub fn main(x) -> Wibble(a) {
    todo
}
